# longshot

./: .gitignore  .travis.yml  BruteForce.cabal  ChangeLog.md  LICENSE  Makefile  README.md  bruteforce  longshot  longshot.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: BruteForce.hs
src/Crypto/: BruteForce.hs  LongShot.hs  Longshot.hs
src/Crypto/BruteForce/: Internal.hs  TH.hs
src/Crypto/LongShot/: Hasher.hs  Internal.hs  TH.hs
src/Crypto/Longshot/: Const.hs  Hasher.hs  Internal.hs  TH.hs
test/: Spec.hs
